--- a/scss/_typography.scss
+++ b/scss/_typography.scss
@@ -13,7 +13,6 @@
 .para-primary {
     font-size: 1.7rem;
     color: $color-text;
-    text-align: center;
     font-weight: 500;
-    padding: 0 15rem;
+    //padding: 0 15rem;
 }
