--- a/scss/_layout.scss
+++ b/scss/_layout.scss
@@ -3,30 +3,31 @@
     margin: 0 auto;
 }
 
-
+/////////////////////////////// SECTION HERO //////////////////////////////////
 .section-hero {
     height: 93vh;
-    z-index: -1;
+    //z-index: -1;
 }
 
 .hero {
     height: 95vh;
-    background: url(../img/hero.jpg);
+    background: url(../img/hero.jpg), rgba(0, 0, 0, 0.484);
+    background-blend-mode: color;
     background-size: cover;
     background-position: center;
     position: relative;
-    z-index: -2;
+    z-index: -1;
 
 
-    &::before {
-        background-color: rgba(0, 0, 0, 0.484);
-        content: '';
-        display: block;
-        height: 100%;
-        position: absolute;
-        width: 100%;
-        z-index: -1;
-    }
+    // &::before {
+    //     background-color: rgba(0, 0, 0, 0.484);
+    //     content: '';
+    //     display: block;
+    //     height: 100%;
+    //     position: absolute;
+    //     width: 100%;
+    //     z-index: -1;
+    // }
 
 
 
@@ -34,11 +35,17 @@
         height: 100%;
         width: 100%;
         flex-direction: column;
-        //z-index: 1;
         text-align: center;
+
+        // & a {
+        //     z-index: 1;
+        // }
     }
 
 }
+
+
+/////////////////////////////// SECTION EXPIRENCE //////////////////////////////////
 
 .section-exp {
     background-color: $color-white-2;
@@ -76,3 +83,52 @@
         border-radius: 2rem;
     }
 }
+
+/////////////////////////////// SECTION INTRODUCTION //////////////////////////////////
+
+//.section-intro {}
+
+.intro {
+    //width: 100vw;
+
+    &_img-box {
+        height: 70rem;
+        width: 100%;
+    }
+
+    &-img {
+        height: 100%;
+        width: 100%;
+        display: block;
+    }
+
+    &_text-box {
+        display: flex;
+        align-items: flex-start;
+        gap: 4rem;
+        margin-bottom: 6rem;
+        //padding: 0 4rem;
+
+        & div {
+            padding: 4rem;
+        }
+
+
+        //display: flex;
+        &-item {
+            width: calc(100% /3);
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: flex-start;
+
+            & h2 {
+                margin-bottom: 2rem;
+                font-size: 3rem;
+            }
+        }
+    }
+}
+
+
+/////////////////////////////// SECTION HOW IT WORKS //////////////////////////////////
