--- a/scss/_typography.scss
+++ b/scss/_typography.scss
@@ -10,6 +10,12 @@
     text-align: center;
 }
 
+.heading-tertiary {
+    font-size: 2.5rem;
+    color: $color-text;
+    font-weight: 400;
+}
+
 .para-primary {
     font-size: 1.7rem;
     color: $color-text;
