--- a/scss/_layout.scss
+++ b/scss/_layout.scss
@@ -132,3 +132,39 @@
 
 
 /////////////////////////////// SECTION HOW IT WORKS //////////////////////////////////
+
+.section-hiw {
+    margin-top: 12rem;
+}
+
+.hiw {
+
+    &__heading {
+        margin-bottom: 6rem;
+        text-align: center;
+
+        & h2 {
+            margin-bottom: 2rem;
+        }
+    }
+
+    &__z-pattern {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+
+        &--img-box {
+            display: grid;
+            grid-template-columns: repeat(3, 1fr);
+            gap: 2rem;
+        }
+    }
+}
+
+.z {
+    border-radius: 2rem;
+    display: block;
+    width: 100%;
+
+    &__img-01 {}
+
+}
