--- a/scss/_utilities.scss
+++ b/scss/_utilities.scss
@@ -6,6 +6,10 @@
     align-items: center;
 }
 
+.u-margin-l-2 {
+    margin-left: 2rem;
+}
+
 .u-paddig-l-r-4 {
     padding-left: 4rem;
     padding-right: 4rem;
