--- a/scss/_layout.scss
+++ b/scss/_layout.scss
@@ -53,6 +53,7 @@
 }
 
 .exp {
+    width: 100%;
     background-color: $color-white;
     margin-top: -15rem;
     padding: 9rem;
@@ -90,6 +91,7 @@
 
 .intro {
     //width: 100vw;
+    padding-bottom: 2rem;
 
     &_img-box {
         height: 70rem;
@@ -134,10 +136,16 @@
 /////////////////////////////// SECTION HOW IT WORKS //////////////////////////////////
 
 .section-hiw {
-    margin-top: 12rem;
+    //background-color: $color-white-2;
+    //margin-top: 12rem;
+    padding: 6rem 0;
 }
 
 .hiw {
+    background-color: $color-white;
+    border-radius: 2rem;
+    width: 100%;
+    padding: 6rem;
 
     &__heading {
         margin-bottom: 6rem;
@@ -151,20 +159,68 @@
     &__z-pattern {
         display: grid;
         grid-template-columns: repeat(2, 1fr);
+        gap: 6rem;
 
-        &--img-box {
-            display: grid;
-            grid-template-columns: repeat(3, 1fr);
-            gap: 2rem;
-        }
     }
 }
 
 .z {
-    border-radius: 2rem;
-    display: block;
-    width: 100%;
 
-    &__img-01 {}
+    &__img {
+        display: block;
+        width: 100%;
+        border-radius: 2rem;
+    }
 
+    &__text-box {
+        align-self: center;
+
+        & h3,
+        p {
+            margin-left: 3rem;
+        }
+    }
+
+    &__img-box {
+        width: 100%;
+        display: grid;
+        gap: 2rem;
+        align-items: center;
+        grid-template-columns: repeat(3, 1fr);
+        grid-template-rows: repeat(2, 1fr);
+
+        &--01 {
+
+            &--img-3 {
+                grid-column: 2;
+                grid-row: 1 / 3;
+            }
+        }
+
+        &--02 {
+
+            &--img-1 {
+                grid-column: 1;
+                grid-row: 1 / 3;
+            }
+
+            &--img-4 {
+                grid-column: 3;
+                grid-row: 1 / 3;
+                align-self: center;
+            }
+        }
+
+        &--03 {
+            grid-template-rows: 1fr;
+
+            &--img-2 {
+                align-self: center;
+            }
+        }
+
+
+
+
+    }
 }
