--- a/scss/_typography.scss
+++ b/scss/_typography.scss
@@ -22,3 +22,9 @@
     font-weight: 500;
     //padding: 0 15rem;
 }
+
+.number {
+    font-size: 13rem;
+    color: $color-number;
+    margin-bottom: -6.5rem;
+}
