--- a/scss/_layout.scss
+++ b/scss/_layout.scss
@@ -143,7 +143,6 @@
 
 .hiw {
     background-color: $color-white;
-    border-radius: 2rem;
     width: 100%;
     padding: 6rem;
 
@@ -178,6 +177,7 @@
         & h3,
         p {
             margin-left: 3rem;
+            margin-bottom: 2rem;
         }
     }
 
@@ -219,8 +219,53 @@
             }
         }
 
+    }
+}
 
+/////////////////////////////// SECTION ABOUT US //////////////////////////////////
 
+.section-about-us {
+    background-color: $color-white-2;
+    padding: 8rem;
+}
 
+.au {
+    background-color: $color-white;
+    width: 100%;
+    padding: 6rem;
+    border-radius: 4.2rem;
+
+    &__img {
+        display: block;
+        width: 80%;
+        border-radius: 2rem;
+    }
+
+    &__grid-box {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        gap: 4rem;
+
+        &--1 {
+            padding: 2rem 0;
+            grid-template-columns: 1fr 1fr;
+
+            &-text {
+                align-self: center;
+
+                & h3 {
+                    margin-bottom: 2rem;
+                }
+
+                & p:not(:last-child) {
+                    margin-bottom: 4rem;
+                }
+            }
+        }
+
+        &--2 {
+            grid-template-columns: 1fr 1fr 1fr;
+            margin-top: 4rem;
+        }
     }
 }
